k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calculator
  labels:
    name: calculator
    app: calculator-api
